--- a/game.html
+++ b/game.html
@@ -58,7 +58,7 @@
        x: player.x,
        y: player.y,
        draw: function() { 
-        ctx.drawImage(bullet_img, this.x, this.y )
+        ctx.drawImage(bullet_img, this.x, this.y, this.width, this.height)
        }
       }
     
