--- a/game.html
+++ b/game.html
@@ -54,7 +54,7 @@
       Bullet('B1', 10, 10);
       Bullet('B2', 20, 20);
       Bullet('B3', 30, 30);
-      Bullet('B4', 40, 40);
+      Bullet('B4', player.x, player.y);
     
       function Bullet(id,x,y) {
         
