--- a/game.html
+++ b/game.html
@@ -85,6 +85,12 @@
   left:false,
   right:false,
   up:false,
+  down:false,
+  leftAttack: false,
+  rightAttack: false,
+  upAttack: false,
+  downAttack: false,   
+      
   keyListener:function(event) {
 
     var key_state = (event.type == "keydown")?true:false;
