--- a/game.html
+++ b/game.html
@@ -106,7 +106,8 @@
       
       if (controller.upAttack)
       {
-      Bullet('B1', player.x, player.y);
+      Bullet('B1', player.x + 15, player.y +30);
+        console.log('this worked')
       }
     
       function Bullet(id,x,y) {
