--- a/game.html
+++ b/game.html
@@ -136,7 +136,7 @@
         playerUpdate();
         
         if (controller.upAttack){
-          Bullet('B1', player.x + 15, player.y +30);
+          Bullet('B1', player.x + player.width/2, player.y -30);
           console.log('this worked')
         }
         
