--- a/game.html
+++ b/game.html
@@ -154,7 +154,7 @@
         
        if (controller.upAttack) {
        var x = player.x + 10
-       var y = player.x - 30
+       var y = player.y - 30
        var id = Math.random();
        Bullet(id, x, y); 
         }
