--- a/game.html
+++ b/game.html
@@ -160,7 +160,7 @@
        var x_speed = 0
        var y_speed = -5
        var x = player.x + 10
-       var y = player.y - 30
+       var y = player.y - 5
        var id = Math.random();
        Bullet(id, x, y, x_speed, y_speed); 
         }
@@ -169,7 +169,7 @@
        var x_speed = 0
        var y_speed = 5
        var x = player.x + 10
-       var y = player.y - 30
+       var y = player.y + 35
        var id = Math.random();
        Bullet(id, x, y, x_speed, y_speed); 
         }
@@ -177,8 +177,8 @@
            if (controller.rightAttack) {
        var x_speed = 5
        var y_speed = 0
-       var x = player.x + 10
-       var y = player.y - 30
+       var x = player.x + 35
+       var y = player.y - 10
        var id = Math.random();
        Bullet(id, x, y, x_speed, y_speed); 
         }
@@ -186,8 +186,8 @@
            if (controller.leftAttack) {
        var x_speed = -5
        var y_speed = 0
-       var x = player.x + 10
-       var y = player.y - 30
+       var x = player.x - 5
+       var y = player.y - 10
        var id = Math.random();
        Bullet(id, x, y, x_speed, y_speed); 
         }
