--- a/game.html
+++ b/game.html
@@ -228,7 +228,7 @@
          var command = prompt("Put command here:")
         }
         
-        if (var command === 'increase bullet speed'){
+        if (command === 'increase bullet speed'){
          player.attackSpeed *= 2; 
         }
         
