--- a/game.html
+++ b/game.html
@@ -16,7 +16,7 @@
     <script>
       
       //SET UP
-      var commandFrameCounter
+      var commandFrameCounter = 0
       var frame = 0
       var c = document.getElementById("canvas");
       var ctx = c.getContext("2d");
