--- a/game.html
+++ b/game.html
@@ -238,10 +238,10 @@
         
        switch(command) {
         
-           case:'increase bullet speed':
+           case 'increase bullet speed':
                player.attackSpeed *= 2;
            break;
-           case:'increase player speed':
+           case'increase player speed':
                player.x_speed *= 2;
                player.y_speed *= 2;
            break;
