--- a/game.html
+++ b/game.html
@@ -317,6 +317,8 @@
            case 'increase bullet speed':
                player.attackSpeed *= 2;
            break;
+           case 'increase player speed':
+               player.speedBoost += 0.5;
          default:
            confirm('sorry, that is not a command');     
        }}   
