--- a/game.html
+++ b/game.html
@@ -108,7 +108,7 @@
       enemySpawnCounter: 0,
       attackSpeed: 1,
       attackCounter: 0,
-      seedBoost: 0,
+      speedBoost: 0,
       draw: function() {
       ctx.drawImage(player_img, this.x, this.y, this.width, this.height)
       }
