--- a/game.html
+++ b/game.html
@@ -319,6 +319,7 @@
            break;
            case 'increase player speed':
                player.speedBoost += 0.5;
+           break;
          default:
            confirm('sorry, that is not a command');     
        }}   
