--- a/game.html
+++ b/game.html
@@ -314,10 +314,10 @@
        
        switch(command) {
         
-           case 'increase bullet speed':
+           case 'IBS':
                player.attackSpeed *= 2;
            break;
-           case 'increase player speed':
+           case 'IPS':
                player.speedBoost += 0.5;
            break;
          default:
