--- a/game.html
+++ b/game.html
@@ -278,7 +278,7 @@
       
       function generateEnemy() {
         if (player.enemySpawnCounter > 300){
-        var x_speed = Math.random() * 4 
+        var x_speed = (Math.random() + 0.5) * 2   
         var y_speed = x_speed
         var x = Math.random() * 650;
         var y = Math.random() * 650;
