--- a/game.html
+++ b/game.html
@@ -16,7 +16,7 @@
     <script>
       
       //SET UP
-      var pause
+      var pause = false
       var immunityCounter = 0
       var commandFrameCounter = 0
       var frame = 0
