--- a/game.html
+++ b/game.html
@@ -212,7 +212,7 @@
           pause = true 
         }
         
-        if (conrtoller.esc && pause) {
+        if (controller.esc && pause) {
          pause = false 
         }
         
