--- a/fighter.html
+++ b/fighter.html
@@ -2,7 +2,7 @@
 
 <head>
 
-<title>Fighting Game</title>
+<title>Fighter</title>
 <link rel="stylesheet" href="style.css">
  
 </head>
@@ -26,7 +26,7 @@
       function drawCanvas() {
         
       ctx.fillStyle = "#cccccc";
-      ctx.fillRect(0, 0, 650, 650);
+      ctx.fillRect(0, 0, 2000, 650);
         
       }
  
