--- a/shooter.html
+++ b/shooter.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>PLACEHOLDER</title>
+    <title>Shooter</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
