--- a/shooter.html
+++ b/shooter.html
@@ -161,7 +161,7 @@
       function Enemy(id,x,y,x_speed,y_speed, width, height) {
         
         var enemy_img = new Image();
-      enemy_img.src = "https://www.solidbackgrounds.com/images/2560x1440/2560x1440-blue-solid-color-background.jpg"
+      enemy_img.src = "basicEnemy.png"
       
       var enemy = {
        x_speed: x_speed,
