--- a/shooter.html
+++ b/shooter.html
@@ -172,7 +172,7 @@
        y: y,
        id: id, 
        draw: function() { 
-        ctx.drawImage(enemy_img, this.x, this.y, this.width, this.height)
+        ctx.drawImage(enemy_img, 100, 100, 245, 245, this.x, this.y, this.width, this.height)
        }
       }
      
