--- a/shooter.html
+++ b/shooter.html
@@ -425,6 +425,7 @@
         if (player.x >= (background.sX + 500)) {
          background.sX += 10
          background.sWidth += 10 
+         player.x = (background.sX + 500)  
         }
         
         
