--- a/shooter.html
+++ b/shooter.html
@@ -425,6 +425,7 @@
         if (player.x >= (background.sX + 500)) {
          if (player.x + 150 !== 1250){
          background.sX += 4
+         player.x -= 4  
          player.x = (background.sX + 500) 
         }
         }
