--- a/shooter.html
+++ b/shooter.html
@@ -443,7 +443,7 @@
         if (player.y <= (background.sY + 150)) {
          if (player.y - 150 !== 0){
          background.sY -= 8
-         player._speed = 0  
+         player.y_speed = 0  
         }
         }
         
