--- a/shooter.html
+++ b/shooter.html
@@ -171,7 +171,7 @@
       function Enemy(id, sX, sY, sHeight, sWidth, x, y, x_speed, y_speed, width, height) {
         
         var enemy_img = new Image();
-      enemy_img.src = "basicEnemy.png"
+      enemy_img.src = "blueEnemySpriteSheet.png"
       
       var enemy = {
        x_speed: x_speed,
