--- a/shooter.html
+++ b/shooter.html
@@ -16,6 +16,10 @@
     <script>
       
       //SET UP
+      var eSXV
+      var eSYV
+      var eSWV
+      var eSHV
       var pauseTimer = 0
       var pause = false
       var immunityCounter = 0
