--- a/shooter.html
+++ b/shooter.html
@@ -147,7 +147,7 @@
       function Bullet(id,x,y,x_speed,y_speed) {
         
         var bullet_img = new Image();
-      bullet_img.src = "https://cdn.static-economist.com/sites/default/files/images/2014/06/blogs/babbage/20140628_stp501.jpg"
+      bullet_img.src = "bullet.png"
       
       var bullet = {
        x_speed: x_speed,
