--- a/shooter.html
+++ b/shooter.html
@@ -175,7 +175,7 @@
       function Enemy(id, x, y, x_speed, y_speed, width, height) {
         
         var enemy_img = new Image();
-      enemy_img.src = "blueEnemySpriteSheet.png"
+      enemy_img.src = "blueEnemy.png"
       
       var enemy = {
        x_speed: x_speed,
