--- a/shooter.html
+++ b/shooter.html
@@ -16,7 +16,7 @@
     <script>
       
       //SET UP
-      var animationTimer
+      var animationTimer = 0
       var eSXV
       var eSYV
       var eSWV
