--- a/shooter.html
+++ b/shooter.html
@@ -336,7 +336,7 @@
          something.sY = 4
          something.sWidth = 210
          something.sHeight = 240   
-            if (animationTimer === 1) {
+            if (animationTimer >= 1) {
          something.sX = 6
          something.sY = 263
          something.sWidth = 233
