--- a/shooter.html
+++ b/shooter.html
@@ -256,7 +256,7 @@
         }
         
         if (frame % 10 === 0) {
-         animationTimer++ 
+         enemy.animationTimer++ 
         }
         
         if (frame % 47 === 0) {   // this should be about 1 second
