--- a/shooter.html
+++ b/shooter.html
@@ -352,13 +352,13 @@
          something.sY = 27
          something.sWidth = 229
          something.sHeight = 218 
-              if (enemy.animationTimer >= 2) {
+              if (something.animationTimer >= 2) {
          something.sX = 6
          something.sY = 263
          something.sWidth = 233
          something.sHeight = 227
                 if (enemy.animationTimer >= 4){
-              enemy.animationTimer = 0
+              something.animationTimer = 0
                 }
             }
         }      
