--- a/shooter.html
+++ b/shooter.html
@@ -358,7 +358,7 @@
          something.sY = 263
          something.sWidth = 233
          something.sHeight = 227
-                if (enemy.animationTimer >= 4){
+                if (something.enemyAnimationTimer >= 4){
               something.enemyAnimationTimer = 0
                 }
             }
