--- a/shooter.html
+++ b/shooter.html
@@ -360,6 +360,7 @@
          something.sHeight = 227
                 if (something.enemyAnimationTimer >= 4){
               something.enemyAnimationTimer = 0
+               animationTimer = 0   
                 }
             }
         }      
