--- a/shooter.html
+++ b/shooter.html
@@ -387,7 +387,7 @@
         var width = 50;
         var height = 50;
         var id = Math.random(); 
-        Enemy(id, x, y, x_speed, y_speed, width, height, animationTimer)
+        Enemy(id, x, y, x_speed, y_speed, width, height)
         player.enemySpawnCounter = 0
         }     
       }
