--- a/shooter.html
+++ b/shooter.html
@@ -584,7 +584,7 @@
       //AUDIO FUNCTIONS
       
      var ouch_audio = document.createElement("audio");
-     ouch_audio.src = "awwFuck.band";
+     ouch_audio.src = "tester.mp3.aifc";
       
       function playerHitSound() {
         ouch_audio.play()  
