--- a/shooter.html
+++ b/shooter.html
@@ -565,6 +565,7 @@
   
   if (player.x >= rightB) {
    background.sX += (player.x - rightB) 
+   player.x -= (player.x - rightB) 
   }
         
         background.draw();
