--- a/shooter.html
+++ b/shooter.html
@@ -568,8 +568,8 @@
    player.x -= (player.x - rightB) 
   }
     if (player.x <= leftB) {
-   background.sX -= (rightB - player.x) 
-   player.x += (rightB - player.x) 
+   background.sX -= (leftB - player.x) 
+   player.x += (leftB - player.x) 
   }
    if (player.y >= downB) {
    background.sY += (player.y - downB) 
