--- a/shooter.html
+++ b/shooter.html
@@ -565,7 +565,8 @@
   
   if ((player.x + player.width) >= rightB) {
    background.sX += ((player.x + player.width) - rightB) 
-   player.x -= ((player.x + player.width) - rightB)  
+   player.x -= ((player.x + player.width) - rightB) 
+   enemyList.x -= ((player.x + player.width) - rightB)  
   }
         
     if (player.x <= leftB) {
