--- a/shooter.html
+++ b/shooter.html
@@ -566,13 +566,14 @@
   if ((player.x + player.width) >= rightB) {
    background.sX += ((player.x + player.width) - rightB) 
    player.x -= ((player.x + player.width) - rightB) 
-   enemyList.x -= ((player.x + player.width) - rightB)  
+   for (var key in enemyList){
+    enemyList[key].x -= ((player.x + player.width) - rightB)  
+   }
   }
         
     if (player.x <= leftB) {
    background.sX -= (leftB - player.x) 
-   player.x += (leftB - player.x)
-   console.log(enemy.x)   
+   player.x += (leftB - player.x) 
   }
         
    if ((player.y + player.height) >= downB) {
