--- a/shooter.html
+++ b/shooter.html
@@ -227,6 +227,7 @@
       function update() {
         
        ctx.clearRect(0, 0, 650, 650);
+        updateBackground();
         playerUpdate();
         generateBullet();
         generateEnemy();
