--- a/shooter.html
+++ b/shooter.html
@@ -561,12 +561,13 @@
   
   if ((player.x + player.width) >= rightB) {
    background.sX += ((player.x + player.width) - rightB) 
-   player.x -= ((player.x + player.width) - rightB) 
+   player.x -= ((player.x + player.width) - rightB)  
   }
         
     if (player.x <= leftB) {
    background.sX -= (leftB - player.x) 
    player.x += (leftB - player.x) 
+   enemyList.x += (leftB - player.x)    
   }
         
    if ((player.y + player.height) >= downB) {
