--- a/shooter.html
+++ b/shooter.html
@@ -567,7 +567,8 @@
     if (player.x <= leftB) {
    background.sX -= (leftB - player.x) 
    player.x += (leftB - player.x) 
-   for (key in enemyList) { enemyList[key].x += (leftB - player.x) }
+   for (key in enemyList) { enemyList[key].x += (leftB - player.x) 
+                          console.log('this ran')}
   }
         
    if ((player.y + player.height) >= downB) {
