--- a/shooter.html
+++ b/shooter.html
@@ -587,6 +587,8 @@
    for (key in enemyList) { enemyList[key].y += (upB - player.y) }    
    player.y += (upB - player.y) 
   }
+        background.draw();        
+        background.sX += background.width
         background.draw();
       }
      
