--- a/shooter.html
+++ b/shooter.html
@@ -470,6 +470,8 @@
       //START OVER
       
       function startOver() {
+       background.sX = 0
+       background.sY = 0 
        player.x = 650/2
        player.y = 650/2     
        player.enemySpawnSpeed = 1
