--- a/shooter.html
+++ b/shooter.html
@@ -16,7 +16,7 @@
     <script>
       
       //SET UP
-      var scoreTime
+      var scoreTime = 0
       var rightB = 0
       var leftB = 0
       var upB = 0
