--- a/shooter.html
+++ b/shooter.html
@@ -301,7 +301,8 @@
         if (isColliding) {       
          delete bulletList[key]
           delete enemyList[key2]
-          player.money += 100;     
+          player.money += 100; 
+          score += 50;
              
         }  
            }  
