--- a/shooter.html
+++ b/shooter.html
@@ -479,6 +479,7 @@
        player.enemySpawnSpeed = 1
        player.bulletSpeedCost = 0
        player.speedCost = 0 
+       score = 0; 
        
          for (var key in bulletList){       
               delete bulletList[key] }
