--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1 class="Spartan">"This Text is in League Spartan"</h1>
-    <a href="./shooter.html">
-  <button type="button" class="play_btn">Play Shooter</button>
-      </a>
+    <h1 class="Spartan">This Text is in League Spartan</h1>
+    //<a href="./shooter.html">
+  //<button type="button" class="play_btn">Play Shooter</button>
+      //</a>
     
     
   </body>
