--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   </head>
   <body>
     <h1 class="Spartan">This Text is in League Spartan</h1>
-    //<a href="./shooter.html">
-  //<button type="button" class="play_btn">Play Shooter</button>
-      //</a>
+    <a href="./shooter.html">
+  <button type="button" class="play_btn">Play Shooter</button>
+      </a>
     
     
   </body>
