--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1 class="Spartan">This Text is in League Spartan</h1>
+    <h1 class="Spartan">all the thanks</h1>
     <br>
     <br>
     <br>
