--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
   <head>
-     <link href="http://allfont.net/allfont.css?fonts=league-spartan" rel="stylesheet" type="text/css" />
-    <title>PLACEHOLDER</title>
+     @import url(http://allfont.net/allfont.css?fonts=league-spartan);
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
