--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-     @import url(http://allfont.net/allfont.css?fonts=league-spartan);
+  <link href="http://allfont.net/allfont.css?fonts=league-spartan" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
