--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1 class="Spartan">all the thanks</h1>
+    <h1 class="Spartan">all the thanks.</h1>
+    <h2 class ="Mon">this text is in montserrat</h2>
     <br>
     <br>
     <br>
