--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <a href="./shooter.html">
   <button type="button" class="play_btn">Play Shooter</button>
       </a>
+     <a href="./tester.html">
+  <button type="button" class="play_btn">Play Tester</button>
+      </a>
   
     
     
