--- a/index.html
+++ b/index.html
@@ -5,12 +5,9 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <a href="./shooter.html">
-  <button type="button" class="play_btn">Play Shooter</button>
-      </a>
-     <a href="./tester.html">
-  <button type="button" class="play_btn">Play Tester</button>
-      </a>
+    <p>
+      This is text!
+      </p>
   
     
     
