--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
   <head>
-     <link href="http://allfont.net/allfont.css?fonts=montserrat" rel="stylesheet" type="text/css" />
-  <link href="http://allfont.net/allfont.css?fonts=league-spartan" rel="stylesheet" type="text/css" />
+     <image src="Provence.jpg"/>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
