--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-     <image src="Provence.jpg"/>
+     <img src="Provence.jpg"/>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
