--- a/index.html
+++ b/index.html
@@ -1,14 +1,11 @@
+<!DOCTYPE html>
 <html>
   <head>
-     <img src="images/Provence.jpg"/>
-    <link rel="stylesheet" href="style.css">
+    <title>Griff's Space</title>
+    <h1>Griff's Space</h1>
+    <h2>On this page I plan to post thing's that I am working on or links to complete projects</h2>
   </head>
   <body>
-    <p>
-      This is text!
-      </p>
   
-    
-    
   </body>
 </html>
