Doing this again for practice

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <h2>On this page I plan to post thing's that I am working on or links to complete projects</h2>
   </head>
   <body>
+    <p>This is just some more practice to make sure I know what I am doing</p>
   
   </body>
 </html>
