--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <p>This is just some more practice to make sure I know what I am doing</p>
-  
+    <p>And now I just gotta do this one more time too</p>  
   </body>
 </html>
