--- a/index.html
+++ b/index.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="styles.css">
     <title>Griff's Space</title>
     <h1>Griff's Space</h1>
     <h2>On this page I plan to post thing's that I am working on or links to complete projects</h2>
   </head>
   <body>
-    <p>This is just some more practice to make sure I know what I am doing</p>
-    <p>And now I just gotta do this one more time too</p>  
+    <br>
+    <h3>6/23/21 - Post #1: </h3>
+    <p>This is my first post to this website. I'm currently working on learning git commands for an internship. I'm not gonna lie it's pretty
+      difficult. I also know for a fact that this is not a good way to post things to my website but c'est la vie. I think I got down copying a
+      repository to VS Code using the mac terminal and I can add, commit, push, and pull files. I know the commands for rebasing, merging, 
+      making branches and checking out branches but it's pretty hard to understand. I'm having some trouble making the manuel edits to conflicting
+      code when I merge or rebase but I'll work on that. Aside from learning git stuff I'm working on learning python better and understanding the 
+      libraries like matplotlip and numpy. Also what the hell is conda???? I downloaded it but I don't really understand what it does. I guess
+      I'll just keep watching YouTube Videos and see if I can get it down. P.S. I wrote this whole thing in a separate branch so that kinda messed me up
+      guess I got more work to do learning how branches work. 
+    </p>  
   </body>
 </html>
