ade all text Times New Roman with css

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="styles.css">
+    <link href="style.css" type="text/css" rel="stylesheet">
     <title>Griff's Space</title>
     <h1>Griff's Space</h1>
     <h2>On this page I plan to post thing's that I am working on or links to complete projects</h2>
